--- a/Item3.html
+++ b/Item3.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Visa giftcard</title>
 </head>
 <body>
     
 </body>
 <footer>
-    &copy; 2024 Berry Gavigan. This web project was created for educational purposes.
+    
 </footer>
 </html>
