--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+<p class= "copy"> hiii </p>
 </body>
 <footer>
     &copy; 2024 Berry Gavigan. This web project was created for educational purposes.
