--- a/index.html
+++ b/index.html
@@ -4,104 +4,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>Christmas list</title>
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
+    <div class="row">
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Mouthwash</h3>
+                    <!--Add image and make text on the right of it pls pls pls pls-->
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">Learn more</a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
+                </div>
+            </div>
+        </div>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Ikea alien</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item2.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
+            </div>
+        </div>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Credit card</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item3.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
+    <div class="row">
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Mouthwash</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item4.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
+            </div>
+        </div>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Mouthwash</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item5.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
+            </div>
+        </div>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Mouthwash</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item6.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
+    <div class="row">
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Mouthwash</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item7.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Mouthwash</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item8.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3>Mouthwash</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="" class="lm">Learn more</a>
-                <a href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>Mouthwash</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item9.html" class="lm">Learn more</a>
+                    <a target="_blank" href="" class="bn">Buy now</a>
+                    <p id="cc"></p>
+                </div>
             </div>
         </div>
     </div>
