--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Christmas list</title>
+    <link rel="lego" href="images/hi.png">
 </head>
 <body>
     <div class="row">
@@ -14,8 +15,8 @@
             <div class="card">
                 <div class="content">
                     <h3>Mouthwash</h3>
-                    <!--Add image and make text on the right of it pls pls pls pls-->
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <img class="photo" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
                     <a href="item1.html" class="lm">Learn more</a>
                     <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
                     <p id="cc">Mishaal Zahed on unsplash</p>
@@ -49,7 +50,7 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Mouthwash</h3>
+                    <h3>An axe</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
                     <a href="item4.html" class="lm">Learn more</a>
                     <a target="_blank" href="" class="bn">Buy now</a>
@@ -60,7 +61,7 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Mouthwash</h3>
+                    <h3>Flonder</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
                     <a href="item5.html" class="lm">Learn more</a>
                     <a target="_blank" href="" class="bn">Buy now</a>
@@ -71,7 +72,7 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Mouthwash</h3>
+                    <h3>17 beatles</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
                     <a href="item6.html" class="lm">Learn more</a>
                     <a target="_blank" href="" class="bn">Buy now</a>
@@ -84,7 +85,7 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Mouthwash</h3>
+                    <h3>Old computer</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
                     <a href="item7.html" class="lm">Learn more</a>
                     <a target="_blank" href="" class="bn">Buy now</a>
@@ -95,7 +96,7 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Mouthwash</h3>
+                    <h3>Five dollars</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
                     <a href="item8.html" class="lm">Learn more</a>
                     <a target="_blank" href="" class="bn">Buy now</a>
@@ -106,7 +107,7 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Mouthwash</h3>
+                    <h3>Puffy car dice</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
                     <a href="item9.html" class="lm">Learn more</a>
                     <a target="_blank" href="" class="bn">Buy now</a>
@@ -116,7 +117,7 @@
         </div>
     </div>
 </body>
-<footer>
+<footer id="cc">
     &copy; 2024 Berry Gavigan. This web project was created for educational purposes.
 </footer>
 </html>
