--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Mouthwash</h3>
-                    <img class="photo" src="images/Mouthwash.png" alt="">
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
                     <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item1.html" class="lm">Learn more</a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">Buy now</a>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
                     <p id="cc">Mishaal Zahed on unsplash</p>
                 </div>
             </div>
@@ -26,57 +36,44 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Ikea alien</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item2.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
                 </div>
             </div>
         </div>
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Credit card</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item3.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="container col-3">
-            <div class="card">
-                <div class="content">
-                    <h3>An axe</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item4.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
-                </div>
-            </div>
-        </div>
-        <div class="container col-3">
-            <div class="card">
-                <div class="content">
-                    <h3>Flonder</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item5.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
-                </div>
-            </div>
-        </div>
-        <div class="container col-3">
-            <div class="card">
-                <div class="content">
-                    <h3>17 beatles</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item6.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
                 </div>
             </div>
         </div>
@@ -85,33 +82,134 @@
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Old computer</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item7.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
                 </div>
             </div>
         </div>
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Five dollars</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item8.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
                 </div>
             </div>
         </div>
         <div class="container col-3">
             <div class="card">
                 <div class="content">
-                    <h3>Puffy car dice</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item9.html" class="lm">Learn more</a>
-                    <a target="_blank" href="" class="bn">Buy now</a>
-                    <p id="cc"></p>
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
+                </div>
+            </div>
+        </div>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
+                </div>
+            </div>
+        </div>
+        <div class="container col-3">
+            <div class="card">
+                <div class="content">
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
+                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                        Mouthwash
+                    </h3>
+                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
+                    <a href="item1.html" class="lm">
+                        Learn more
+                    </a>
+                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                        Buy now
+                    </a>
+                    <p id="cc">Mishaal Zahed on unsplash</p>
                 </div>
             </div>
         </div>
