--- a/item1.html
+++ b/item1.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Mouthwash</title>
 </head>
 <body>
-
-</body>
-<footer>
-    
+    <p>Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself. Considering how it kills </p>
+<footer id="cc">
+    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Reference; Mouthwashing (game) 
 </footer>
 </html>
