--- a/item1.html
+++ b/item1.html
@@ -9,7 +9,8 @@
     <title>Mouthwash</title>
 </head>
 <body>
-    <p>Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself. Considering how it kills </p>
+    <p>Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself, considering how it kills 99% of bacteria, however Dragonbreath is hard to find, so a blue bottle of Listerin will do the same job!</p>
+    <p>Mouthwash is pretty cheap, and easy to find in most stores like Walmart, Target, Costo, and Pricechopper. </p>
 <footer id="cc">
     &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Reference; Mouthwashing (game) 
 </footer>
